--- a/ChallengeLogisticRegressionX3.ipynb
+++ b/ChallengeLogisticRegressionX3.ipynb
@@ -36,13 +36,11 @@
     "\n",
     "I ran these features using \"Vanilla\" Binary Logistic regression, Ridge logistic regression, and Lasso Logistic Regression.\n",
     "\n",
-    "For Binary Logistic regression, I did not modify the default \"penalty\" parameter in SKLearn's Logistic Regression method. The penalty parameter appears to be either 'l1' for Lasso Regression or 'l2' for Ridge Regresssion. There is no indication in the documentation of an available 'none' penalty for Binary Logistic Regression, so I used a large number for the \"C\" parameter (inverse of regularization strength) in the case of Binary Logistic Regression.\n",
-    "For Ridge Regression, I specified the 'l2' penalty parameter.\n",
-    "For LASSO Regression, I specified the 'l1' penalty parameter.\n",
+    "For Binary Logistic regression, I did not modify the default \"penalty\" parameter in SKLearn's Logistic Regression method. The penalty parameter appears to be either 'l1' for Lasso Regression or 'l2' for Ridge Regresssion. I used a large number for the \"C\" parameter (inverse of regularization strength) in the case of Binary Logistic Regression.\n",
+    "For Ridge Regression, I specified the 'l2' penalty parameter and tried various C parameter values until I achieved an optimum result, using r-squared as the model evaluation criterion.\n",
+    "For LASSO Regression, I specified the 'l1' penalty parameter and tried various C parameter values until I achieved an optimum result, using r-squared as the model evaluation criterion.\n",
     "\n",
-    "Surprisingly, none of the features appeared to be worth dropping - neither Ridge nor LASSO regression improved on the performance of Binary Logistic regression in this case, and Lasso Regression did not force any features to be nearly zero. \n",
-    "\n",
-    "I decided to try the three techniques for modelling a non-binary outcome - in other words, using the three techniques as regressors rather than classifiers. The models retained comparable performance as regressors, both as compared to their performance as classifiers, and compared to each other, using r-squared as a model evaluation criterion.\n"
+    "In this case, none of the features appeared to be worth dropping - neither Ridge nor LASSO regression substantially improved on the performance of Binary Logistic regression, and Lasso Regression did not force any features to be nearly zero. \n"
    ]
   },
   {
@@ -826,20 +824,20 @@
       "Cross-validating a Ridge Logistic Regression model between two different data sets: \n",
       "\n",
       "Coefficients: \n",
-      " [[  3.54309159e-05  -4.93383602e-01  -6.66853409e-04  -4.71805908e-02\n",
-      "    4.68262982e-02  -4.06769075e-02   6.99936760e-03]]\n",
+      " [[  1.65066777e-05  -4.25146285e-01  -1.59720692e-04  -3.34679235e-02\n",
+      "    4.46508373e-02  -3.71046377e-02   1.35630310e-03]]\n",
       "Intercept: \n",
-      " [-2.49527237]\n",
+      " [-1.88753422]\n",
       "R squared of model on 2013 training data: \n",
       " 0.902298850575\n",
       "R squared of model on 2014 test data: \n",
-      " 0.910326086957\n"
+      " 0.91847826087\n"
      ]
     }
    ],
    "source": [
     "# Ridge Logistic Regression - default penalty in SKLearn is L2 regularization, which is Ridge Regression\n",
-    "regrR = LogisticRegression(penalty='l2')\n",
+    "regrR = LogisticRegression(penalty='l2',C=0.11)\n",
     "print('Cross-validating a Ridge Logistic Regression model between two different data sets: \\n')\n",
     "\n",
     "# Fit our model to our training data.\n",
@@ -868,12 +866,12 @@
       "Cross-validating a LASSO Logistic Regression model between two different data sets: \n",
       "\n",
       "Coefficients: \n",
-      " [[  2.18122556e-05   6.25807659e-01  -1.69208576e-04  -3.15863739e-03\n",
-      "    6.43179774e-03   6.21029045e-03   2.55727601e-03]]\n",
+      " [[  4.45879450e-06   0.00000000e+00   1.37755084e-04  -1.19027562e-03\n",
+      "    7.01299650e-03   9.03146059e-03   5.65484542e-04]]\n",
       "Intercept: \n",
-      " [-3.1493986]\n",
+      " [-2.02428692]\n",
       "R squared of model on 2013 training data: \n",
-      " 0.899425287356\n",
+      " 0.89367816092\n",
       "R squared of model on 2014 test data: \n",
       " 0.913043478261\n"
      ]
@@ -881,7 +879,7 @@
    ],
    "source": [
     "# LASSO Logistic Regression - specifying L1 penalty in SKLearn, which is LASSO Regression\n",
-    "regrL = LogisticRegression(penalty='l1')\n",
+    "regrL = LogisticRegression(penalty='l1',C=0.05)\n",
     "print('Cross-validating a LASSO Logistic Regression model between two different data sets: \\n')\n",
     "\n",
     "# Fit our model to our training data.\n",
@@ -896,240 +894,6 @@
     "# Performance on the test data:\n",
     "# Score is measuring predicted outcome (same as regr.predict()) v. test data.\n",
     "print('R squared of model on 2014 test data: \\n',regrL.score(df2014_features,df2014_target))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validating a LASSO Logistic Regression model between two different data sets: \n",
-      "\n",
-      "Coefficients: \n",
-      " [[ -3.60299197e-05  -1.37758236e+00   9.46376181e-04   3.80230617e-02\n",
-      "   -3.16699522e-02   1.94030320e-02  -6.15160120e-03]\n",
-      " [  2.83809270e-05   1.49223839e+00   2.26277797e-04  -3.38745055e-02\n",
-      "    4.09047852e-03  -1.32566247e-02   6.60949762e-03]\n",
-      " [  4.79891405e-05   0.00000000e+00  -1.88681946e-03   2.07009987e-02\n",
-      "   -5.23287093e-04  -9.77706021e-03   2.81149839e-03]\n",
-      " [ -9.65096299e-04   0.00000000e+00   1.04637677e-02  -1.17892203e-01\n",
-      "    9.89760450e-03   0.00000000e+00   5.71353897e-02]\n",
-      " [ -1.99744865e-04   0.00000000e+00  -2.51548749e-02   2.13686541e-01\n",
-      "    1.51444765e-01  -5.17541448e-01   1.50422333e-01]\n",
-      " [ -3.17114194e-03   0.00000000e+00  -3.47850479e-03   1.47556101e-02\n",
-      "    1.33375225e-01   1.39981001e-01   1.26047170e-02]\n",
-      " [  1.75975014e-06   0.00000000e+00  -6.77859678e-02   0.00000000e+00\n",
-      "    1.18894195e-01   9.42264677e-02  -2.88748780e-02]\n",
-      " [ -5.20149230e-05   0.00000000e+00   3.43158444e-03  -1.36157166e-01\n",
-      "    2.27506863e-02  -8.26544354e-03   1.85831784e-03]\n",
-      " [ -6.17055779e-05   0.00000000e+00   2.17552101e-03  -4.07014222e-02\n",
-      "   -4.37784415e-04   1.63189521e-02   9.34173244e-04]\n",
-      " [ -3.42294898e-03   0.00000000e+00  -6.87814697e-02   1.08140920e+00\n",
-      "    4.43034242e-01   0.00000000e+00  -3.15296753e-01]\n",
-      " [ -1.19018887e-03   0.00000000e+00  -8.16650892e-03   2.38301475e-01\n",
-      "   -9.04454442e-02   0.00000000e+00   1.37337655e-01]\n",
-      " [ -1.18652180e-03   0.00000000e+00   8.48465467e-03   0.00000000e+00\n",
-      "    1.27639148e-01  -2.56977717e-01   6.70062215e-02]\n",
-      " [ -5.35600000e-03   0.00000000e+00   2.08566108e-03   3.90931067e-01\n",
-      "    2.20648265e-01   1.97137570e-03   7.87887770e-02]\n",
-      " [ -2.98704149e-04   0.00000000e+00  -5.94018113e-03   0.00000000e+00\n",
-      "    5.25279696e-02   6.76609310e-02  -9.25876851e-02]]\n",
-      "Intercept: \n",
-      " [ 3.998068   -3.96529528 -4.69754382 -4.23616149 -4.58758936 -0.52125968\n",
-      " -3.90592147 -5.31874099 -5.34167765  0.         -3.45967597 -3.32477016\n",
-      "  0.         -3.87850219]\n",
-      "R squared of model on 2013 training data: \n",
-      " 0.899425287356\n",
-      "R squared of model on 2014 test data: \n",
-      " 0.877717391304\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Let's try LASSO Logistic Regression on MurderNum, which is the number of murders, rather than the binary outcome\n",
-    "# represented by Murder_and_nonnegligent_manslaughter\n",
-    "df2013_features=df2013_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2013_target=df2013_processed['MurderNum']\n",
-    "df2014_features=df2014_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2014_target=df2014_processed['MurderNum']\n",
-    "# LASSO Logistic Regression - specifying L1 penalty in SKLearn, which is LASSO Regression\n",
-    "regrL = LogisticRegression(penalty='l1')\n",
-    "print('Cross-validating a LASSO Logistic Regression model between two different data sets: \\n')\n",
-    "\n",
-    "# Fit our model to our training data.\n",
-    "regrL.fit(df2013_features,df2013_target)\n",
-    "\n",
-    "print('Coefficients: \\n', regrL.coef_)\n",
-    "print('Intercept: \\n', regrL.intercept_)\n",
-    "\n",
-    "# Performance on the training data:\n",
-    "print('R squared of model on 2013 training data: \\n',regrL.score(df2013_features,df2013_target)) \n",
-    "\n",
-    "# Performance on the test data:\n",
-    "# Score is measuring predicted outcome (same as regr.predict()) v. test data.\n",
-    "print('R squared of model on 2014 test data: \\n',regrL.score(df2014_features,df2014_target))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validating a Ridge Logistic Regression model between two different data sets: \n",
-      "\n",
-      "Coefficients: \n",
-      " [[ -2.81387792e-05   5.49084557e-01   5.16063855e-04   3.79112097e-02\n",
-      "   -3.51006646e-02   2.26358652e-02  -5.31196246e-03]\n",
-      " [  2.96430524e-05   2.10680459e-01   4.20638144e-04  -3.82064632e-02\n",
-      "    5.05495541e-03  -1.52415284e-02   7.00122969e-03]\n",
-      " [ -5.31332134e-05  -2.54237683e-01   8.16213757e-05   1.11589279e-01\n",
-      "    9.02074316e-03   3.23763037e-03  -5.87241221e-02]\n",
-      " [ -2.11610092e-03  -6.15809909e-01   2.25440081e-02  -3.93920489e-01\n",
-      "    2.91359524e-01  -3.51102602e-01   8.25292925e-02]\n",
-      " [ -4.55325512e-04  -8.31647220e-01  -2.12084323e-02   2.64812630e-01\n",
-      "    2.82611298e-01  -8.72898937e-01   1.75839840e-01]\n",
-      " [ -9.03666673e-03  -2.13922740e-03   1.62020857e-02   5.84285212e-02\n",
-      "    3.90128187e-01   1.80458937e-01   8.89679441e-02]\n",
-      " [ -3.46542614e-05  -7.62999083e-02  -1.47805976e-01  -3.30276319e-01\n",
-      "    5.70886363e-01  -7.80135312e-02  -2.24016449e-01]\n",
-      " [ -3.62140560e-04  -7.55186187e-01   9.03523624e-03  -1.30893388e-01\n",
-      "    7.06341414e-02  -6.13465394e-02  -9.36201596e-03]\n",
-      " [ -1.72225949e-04  -8.31310764e-01   4.72124738e-03  -3.05626774e-02\n",
-      "    1.12129088e-02   1.18050052e-02  -1.16586060e-02]\n",
-      " [ -3.37432258e-03  -5.67167988e-03  -1.24364115e-01   6.85868839e-01\n",
-      "    7.77901289e-01  -4.48096068e-02  -4.88883160e-01]\n",
-      " [ -2.11177980e-03  -7.66584368e-01  -2.64015891e-02   5.06314703e-01\n",
-      "   -2.63365345e-01   2.41107785e-01   2.39252945e-01]\n",
-      " [ -3.57118105e-03  -1.56844215e-01   1.89413663e-02  -1.23674468e-01\n",
-      "    7.25683286e-01  -1.13612036e+00   1.20246087e-01]\n",
-      " [ -8.87449295e-03  -1.36565249e-02  -7.23355728e-03   3.19613210e-01\n",
-      "    3.65801267e-01  -2.62470994e-02   2.73382539e-01]\n",
-      " [ -3.79273084e-03  -1.95525947e-02   4.63224006e-02   1.31985598e-01\n",
-      "    6.55789166e-01   1.66336832e-01  -9.23794075e-01]]\n",
-      "Intercept: \n",
-      " [ 2.23272344 -2.92485803 -1.46280229 -1.13721022 -2.9038282  -0.03194703\n",
-      " -1.41018226 -2.327698   -3.04765288 -0.27983297 -1.56080769 -0.61833724\n",
-      " -0.05478942 -0.49041609]\n",
-      "R squared of model on 2013 training data: \n",
-      " 0.89367816092\n",
-      "R squared of model on 2014 test data: \n",
-      " 0.869565217391\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Trying Ridge Regression on MurderNum:\n",
-    "\n",
-    "df2013_features=df2013_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2013_target=df2013_processed['MurderNum']\n",
-    "df2014_features=df2014_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2014_target=df2014_processed['MurderNum']\n",
-    "# Ridge Logistic Regression - default penalty in SKLearn is L2 regularization, which is Ridge Regression\n",
-    "regrR = LogisticRegression(penalty='l2')\n",
-    "print('Cross-validating a Ridge Logistic Regression model between two different data sets: \\n')\n",
-    "\n",
-    "# Fit our model to our training data.\n",
-    "regrR.fit(df2013_features,df2013_target)\n",
-    "\n",
-    "print('Coefficients: \\n', regrR.coef_)\n",
-    "print('Intercept: \\n', regrR.intercept_)\n",
-    "\n",
-    "# Performance on the training data:\n",
-    "print('R squared of model on 2013 training data: \\n',regrR.score(df2013_features,df2013_target)) \n",
-    "\n",
-    "# Performance on the test data:\n",
-    "# Score is measuring predicted outcome (same as regr.predict()) v. test data.\n",
-    "print('R squared of model on 2014 test data: \\n',regrR.score(df2014_features,df2014_target))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross-validating a Binary Logistic Regression model between two different data sets: \n",
-      "\n",
-      "Coefficients: \n",
-      " [[ -4.19747938e-05   3.82186025e-01   7.90325567e-04   4.47543536e-02\n",
-      "   -4.07035346e-02   3.22238943e-02  -7.81785652e-03]\n",
-      " [  9.70411710e-06  -4.26466547e-01   1.09528023e-03  -4.07860814e-02\n",
-      "    1.31050338e-02  -2.35325022e-02   3.31525103e-03]\n",
-      " [ -1.48185635e-04  -5.44575018e-02  -4.12511304e-03   4.47507562e-02\n",
-      "    3.74632620e-02   1.25421443e-02  -5.23761930e-02]\n",
-      " [ -2.24845469e-03  -5.33601191e-01   2.34465252e-02  -4.27496482e-01\n",
-      "    3.17458979e-01  -3.81699313e-01   8.87623432e-02]\n",
-      " [ -7.06916709e-05  -2.15439388e+00  -7.02100390e-02   3.07394950e-01\n",
-      "    6.16253351e-01  -1.57535880e+00   3.34697375e-01]\n",
-      " [ -1.23779582e-02  -2.79948232e-03   2.79394718e-02   9.04782491e-02\n",
-      "    5.44103593e-01   2.27769613e-01   9.95802020e-02]\n",
-      " [ -2.82223046e-05  -7.33646774e-02  -1.49679384e-01  -3.09223754e-01\n",
-      "    5.78670453e-01  -7.61975745e-02  -2.47634794e-01]\n",
-      " [ -7.51796731e-04  -3.03498216e-01   1.48426609e-02  -1.73016781e-01\n",
-      "    1.95461557e-01  -2.26884338e-01  -2.33209422e-02]\n",
-      " [ -1.30376864e-04  -8.74574527e-01   2.96652560e-03   2.73170813e-02\n",
-      "   -2.92597017e-02   6.79761305e-02  -1.45897582e-02]\n",
-      " [ -4.93256334e-03  -6.74057552e-03  -1.66997905e-01   9.98412798e-01\n",
-      "    1.10660451e+00  -7.02149383e-02  -7.14302509e-01]\n",
-      " [ -2.15844723e-03  -8.57618457e-01  -3.00611158e-02   5.44350807e-01\n",
-      "   -2.88955664e-01   2.76900771e-01   2.51314994e-01]\n",
-      " [ -4.25798547e-03  -2.03560760e-01   2.19946461e-02  -2.56778629e-02\n",
-      "    8.70572035e-01  -1.41491594e+00   1.37125109e-01]\n",
-      " [ -1.26485822e-02  -1.93119883e-02  -7.11653207e-03   4.57993155e-01\n",
-      "    5.37118112e-01  -4.62031747e-02   3.66597987e-01]\n",
-      " [ -6.91163359e-03  -3.67382211e-02   9.36510289e-02   1.94118165e-01\n",
-      "    1.18514018e+00   2.81395882e-01  -1.66909528e+00]]\n",
-      "Intercept: \n",
-      " [ 2.83024656 -1.81123064 -0.32105379 -0.99208088 -7.36642733 -0.05050371\n",
-      " -1.37906473 -0.93978427 -3.10576279 -0.43808058 -1.73163988 -0.61899189\n",
-      " -0.08539704 -0.71861714]\n",
-      "R squared of model on 2013 training data: \n",
-      " 0.899425287356\n",
-      "R squared of model on 2014 test data: \n",
-      " 0.869565217391\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Binary Logistic Regression on MurderNum:\n",
-    "\n",
-    "df2013_features=df2013_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2013_target=df2013_processed['MurderNum']\n",
-    "df2014_features=df2014_processed[['Population','Robbery','Property_crime','Motor_vehicle_theft','Violent_crime',\n",
-    "                                  'Aggravated_assault','Burglary']]\n",
-    "df2014_target=df2014_processed['MurderNum']\n",
-    "regrV = LogisticRegression(C=1e9)\n",
-    "\n",
-    "print('Cross-validating a Binary Logistic Regression model between two different data sets: \\n')\n",
-    "\n",
-    "# Fit our model to our training data.\n",
-    "regrV.fit(df2013_features,df2013_target)\n",
-    "\n",
-    "print('Coefficients: \\n', regrV.coef_)\n",
-    "print('Intercept: \\n', regrV.intercept_)\n",
-    "\n",
-    "# Performance on the training data:\n",
-    "print('R squared of model on 2013 training data: \\n',regrV.score(df2013_features,df2013_target)) \n",
-    "\n",
-    "# Performance on the test data:\n",
-    "# Score is measuring predicted outcome (same as regr.predict()) v. test data.\n",
-    "print('R squared of model on 2014 test data: \\n',regrV.score(df2014_features,df2014_target))"
    ]
   },
   {
